# kodudo

./: .gitignore  CHANGELOG.md  DOCS.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
examples/: fauna_config.yaml  fauna_html.yaml  fauna_markdown.yaml  fauna_with_meta.json
examples/data/: bororo_fauna.json
examples/templates/html/: base.html.j2  fauna_list.html.j2
src/kodudo/: __init__.py  __main__.py  errors.py
src/kodudo/config/: __init__.py  expander.py  loader.py  schema.yaml  types.py
src/kodudo/data/: __init__.py  loader.py
src/kodudo/rendering/: __init__.py  engine.py  renderer.py
templates/html/: base.html.j2  fauna_list.html.j2
templates/markdown/: fauna_list.md.j2
tests/: test_cli.py  test_config.py  test_cook.py  test_data.py  test_expander.py  test_rendering.py
